@@ -121,14 +121,25 @@ public class RestTempUtil {
     }
 
     public static String encodeString(String input) {
-        return URLEncoder.encode(input, StandardCharsets.UTF_8)
-                .replaceAll("\\+", "%20")
-                .replaceAll("\\%28", "(")
-                .replaceAll("\\%29", ")");
+        try {
+            return URLEncoder.encode(input, StandardCharsets.UTF_8.name())
+                    .replaceAll("\\+", "%20")
+                    .replaceAll("\\%28", "(")
+                    .replaceAll("\\%29", ")");
+        } catch (UnsupportedEncodingException e) {
+            logger.warn("Error encoding input: " + input);
+            throw new RuntimeException(e);
+        }
     }
 
     public static String decodeString(String input) {
-        return URLDecoder.decode(input, StandardCharsets.UTF_8);
+        try {
+            return URLDecoder.decode(input, StandardCharsets.UTF_8.name());
+        } catch (UnsupportedEncodingException e) {
+            logger.warn("Error decoding input: " + input);
+            e.printStackTrace();
+            throw new RuntimeException(e);
+        }
     }
 }
 
